# ai-chat-context-keeper

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  KNOWN_ISSUES.md  LOCAL_VALIDATION.md  Makefile  README.md  ROADMAP.md  SECURITY.md  SECURITY_ADVISORIES.md  commitlint.config.cjs  index.html  mkdocs.yml  package.json  pyproject.toml
.github/: CODEOWNERS  pr-deps.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: adr.md  chore.md  governance.md
.github/workflows/: adr-validators.yml  commitlint.yml  decision-registry.yml  docs.yml  link-check.yml  naming-validators.yml  pin-enforcer.yml  pr-order.yml  pre-commit.yml  python-lint.yml  python-tests.yml  sbom.yml  security-audit.yml  (+3 more)
architecture/: index.html
cli/: index.html
code_of_conduct/: index.html
configuration/: index.html
development/: index.html
docs/: README.md  architecture.md  cli.md  code_of_conduct.md  configuration.md  development.md  governance.md  index.md  kubernetes.md  platform-slos.md  security.md  traceability.json  traceability.md  usage.md
governance/: index.html
kubernetes/: index.html
releases/: 2025-09-03-v0.2.1-alpha.md
scripts/: bench_save_latency.py  doctor_commits.sh  generate_decision_registry.py  local_e2e.sh  ops.sh  smoke_staging.sh  validate_adrs.py  validate_naming.py  validate_traceability.py
search/: search_index.json
security/: index.html
tests/: conftest.py  test_cli.py  test_config.py  test_config_envprefix.py  test_end_to_end.py  test_retention.py  test_utils.py
usage/: index.html
(+46 files in other folders)
